Creamos los servicios para interactuar con la API-REST del servidor

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
   <div class="container p-4" id="app">
     <div class="row">
       <div class="col-md-4">
-        <form id="form-book" class="card card-body">
+        <form id="form-libro" class="card card-body">
           <div class="form-group">
             <input type="text" id="titulo" class="form-control" placeholder="Título" autofocus>
           </div>
